added the a resume link

--- a/public/index.html
+++ b/public/index.html
@@ -119,39 +119,7 @@
                 <div class="divider"></div>
                 <br><br>
                 <!-- Modal Trigger -->
-                <a class="waves-effect waves-light btn modal-trigger" href="#modal1">About Me</a>
-
-                <!-- Modal Structure -->
-                <div id="modal1" class="modal">
-                  <div class="modal-content">
-                    <h4 class="bio-title">About Me</h4>
-                    <p>I am Software Development Engineer who loves programming in JavaScript, React, Node.js, , MongoDB, MySQL,
-                      HTML, CSS, BootStrap, Alexa Skills and much more. Software Development is not just my career it is
-                      my passion. I love the process of having a problem, the tension of working through it with your team,
-                      and the overwhelming feeling of satisfaction of successfully fixing that problem and over-delivering
-                      on a product that will positively impact a client, a business, and/or society. A quote I read that
-                      well describes how I feel about programming is “I know they say if you love what you do, you'll never
-                      work a day in your life. Well I don't buy that! I think if you love what you do, you're going to work
-                      all day, everyday, harder than everyone else”. I find joy learning new technologies and both professionally
-                      and personally growing. In 2014 I took a job as the VP of business Development to launch a startup
-                      in Raleigh, NC for Monster Tree Service. After the first year of the launch our team received the “Rookie
-                      of the Year” award which is an award given to the top performing new location in the country. Interested
-                      keeping our success I took the lead on our strategy which included web development, branding, and social
-                      media strategy. In fiscal year 2015 our location increased revenue by 70% and carried the highest “Rate
-                      Per Man-Hour” in the country. In 2016 we retained the highest “Rate Per Man-Hour” and grew our revenue
-                      to the 3rd highest location in the country. In 2017 to try to increase productivity I began to develop
-                      Software that would allow our industry to streamline the communication between the office and our crews
-                      that were working in the field through a Mobile Web App. The software allows our Project Managers to
-                      live update both schedules and job data that is accessible by crew through their phones on site. The
-                      crew is also able to update data from the job and mark progress that can be accessed by Project Managers
-                      and all data is stored in a searchable database. I was the lead developer on this project and also
-                      was in charge of the onboarding. I value the importance culture and take great pride in being the type
-                      teammate that positively impacts the team around.</p>
-                  </div>
-                  <div class="modal-footer">
-                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
-                  </div>
-                </div>
+                <a class="waves-effect waves-light btn" href="https://docs.google.com/document/d/1L4xT8GUSZfdpB66q_L8t03N4ldAUjosdHac-bORO_uI/edit?usp=sharing" target="_blank">Resume</a>
               </div>
             </div>
             <br>
@@ -314,13 +282,13 @@
                 <div id="modalRecipe" class="modal">
                   <div class="modal-content">
                     <h4>Heather's Recipe Finder</h4>
-                    <p>My wife loves to cook, but can never remember what site she used the last time she found a recipe that she 
-                      really liked. So I built an App, custom designed for her, where she can search a database of recipes. The App
-                      is built in React and uses an API that will search for recipes based on the users input. It will display a title,
-                      picture, description and a link to the source of the recipe.
+                    <p>My wife loves to cook, but can never remember what site she used the last time she found a recipe that
+                      she really liked. So I built an App, custom designed for her, where she can search a database of recipes.
+                      The App is built in React and uses an API that will search for recipes based on the users input. It
+                      will display a title, picture, description and a link to the source of the recipe.
                     </p>
-                    <p class="center-align light">Java Script | ES6 | Node.js | React | NPM | GitHub | Express | HTML 5 | Visual Code Studio
-              | CSS 3 | Bootstrap </p>
+                    <p class="center-align light">Java Script | ES6 | Node.js | React | NPM | GitHub | Express | HTML 5 | Visual Code Studio | CSS 3 |
+                      Bootstrap </p>
                   </div>
                   <div class="modal-footer">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
@@ -411,6 +379,28 @@
               <h5 class="white-text">About Me</h5>
               <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere laboriosam laudantium veniam, laborum optio
                 doloremque officia! Doloribus ratione quia tempora, debitis facilis non eos sed earum magnam, ex odio molestiae.</p>
+              <!--<p>I am Software Development Engineer who loves programming in JavaScript, React, Node.js, , MongoDB, MySQL,
+                      HTML, CSS, BootStrap, Alexa Skills and much more. Software Development is not just my career it is
+                      my passion. I love the process of having a problem, the tension of working through it with your team,
+                      and the overwhelming feeling of satisfaction of successfully fixing that problem and over-delivering
+                      on a product that will positively impact a client, a business, and/or society. A quote I read that
+                      well describes how I feel about programming is “I know they say if you love what you do, you'll never
+                      work a day in your life. Well I don't buy that! I think if you love what you do, you're going to work
+                      all day, everyday, harder than everyone else”. I find joy learning new technologies and both professionally
+                      and personally growing. In 2014 I took a job as the VP of business Development to launch a startup
+                      in Raleigh, NC for Monster Tree Service. After the first year of the launch our team received the “Rookie
+                      of the Year” award which is an award given to the top performing new location in the country. Interested
+                      keeping our success I took the lead on our strategy which included web development, branding, and social
+                      media strategy. In fiscal year 2015 our location increased revenue by 70% and carried the highest “Rate
+                      Per Man-Hour” in the country. In 2016 we retained the highest “Rate Per Man-Hour” and grew our revenue
+                      to the 3rd highest location in the country. In 2017 to try to increase productivity I began to develop
+                      Software that would allow our industry to streamline the communication between the office and our crews
+                      that were working in the field through a Mobile Web App. The software allows our Project Managers to
+                      live update both schedules and job data that is accessible by crew through their phones on site. The
+                      crew is also able to update data from the job and mark progress that can be accessed by Project Managers
+                      and all data is stored in a searchable database. I was the lead developer on this project and also
+                      was in charge of the onboarding. I value the importance culture and take great pride in being the type
+                      teammate that positively impacts the team around.</p>-->
 
 
             </div>
