added links and texts

--- a/public/index.html
+++ b/public/index.html
@@ -132,8 +132,7 @@
         <div class="section no-pad-bot">
           <div class="container">
             <div class="row center">
-              <h4 class="header col s12 light">Fall in love with the process</h4>
-              <h4 class="header col s12 light">and the results will come!</h4>
+              <h4 class="header col s12 light">Fall in love with the process and the results will come!</h4>
             </div>
           </div>
         </div>
@@ -320,7 +319,7 @@
         <div class="section no-pad-bot">
           <div class="container">
             <div class="row center">
-              <h5 class="header col s12 light">More interesting info or maybe a quote</h5>
+              <h5 class="header col s12 light">A leader is one who knows the way, goes the way and shows the way</h5>
             </div>
           </div>
         </div>
@@ -364,7 +363,7 @@
         <div class="section no-pad-bot">
           <div class="container">
             <div class="row center">
-              <h5 class="header col s12 light">More interesting info or maybe a quote</h5>
+              <h5 class="header col s12 light">It is better to make a thousand failures than to be too cowardly to every undertake anything</h5>
             </div>
           </div>
         </div>
@@ -377,8 +376,7 @@
           <div class="row section scrollspy" id="aboutMe">
             <div class="col l6 s12">
               <h5 class="white-text">About Me</h5>
-              <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere laboriosam laudantium veniam, laborum optio
-                doloremque officia! Doloribus ratione quia tempora, debitis facilis non eos sed earum magnam, ex odio molestiae.</p>
+              <p class="grey-text text-lighten-4">Certified Full Stack Web Developer with a passion for Innovation. Strong personal assets are Work Ethic, Problem Solving, and the Ability to Learn new concepts. Career has been in Management, Marketing, and Branding. Experience has cultivated strong skills in Problem Solving, Team Leadership, Desire to Learn and Grow, Time Management, and a ferocious Work Ethic.</p>
               <!--<p>I am Software Development Engineer who loves programming in JavaScript, React, Node.js, , MongoDB, MySQL,
                       HTML, CSS, BootStrap, Alexa Skills and much more. Software Development is not just my career it is
                       my passion. I love the process of having a problem, the tension of working through it with your team,
@@ -405,28 +403,21 @@
 
             </div>
             <div class="col l3 s12">
-              <h5 class="white-text">Partners</h5>
-              <ul>
-                <li><a class="white-text" href="#!">Link 1</a></li>
-                <li><a class="white-text" href="#!">Link 2</a></li>
-                <li><a class="white-text" href="#!">Link 3</a></li>
-                <li><a class="white-text" href="#!">Link 4</a></li>
-              </ul>
             </div>
             <div class="col l3 s12">
               <h5 class="white-text">Connect</h5>
               <ul>
-                <li><a class="white-text" href="#!">Link 1</a></li>
-                <li><a class="white-text" href="#!">Link 2</a></li>
-                <li><a class="white-text" href="#!">Link 3</a></li>
-                <li><a class="white-text" href="#!">Link 4</a></li>
+                <li><a class="white-text" href="https://github.com/WTB20" target="_blank">GitHub</a></li>
+                <li><a class="white-text" href="https://www.linkedin.com/in/wesbubeck/" target="_blank">LinkedIn</a></li>
+                <li><a class="white-text" href="mailto:wesbubeck20@gmail.com">Email</a></li>
+                <li><a class="white-text" href="tel:919489480">Phone Number</a></li>
               </ul>
             </div>
           </div>
         </div>
         <div class="footer-copyright light-blue darken-4">
           <div class="container">
-            Made by <a class="brown-text text-lighten-3" href="#!">Digital Revelation Media</a>
+            Made by <a class="brown-text text-lighten-3" href="#!">Wes Bubeck</a>
           </div>
         </div>
       </footer>
