fixed spelling errors

--- a/public/index.html
+++ b/public/index.html
@@ -192,7 +192,7 @@
                   <div class="col s12 m6">
                     <div class="card blue-grey darken-1">
                       <div class="card-content white-text">
-                        <span class="card-title">Heather's Recipe</span>
+                        <span class="card-title">Heather's Recipes</span>
                         <img class="imgProjects" src="ProjectImages/recipe.png" alt="Crypt News">
                       </div>
                       <div class="card-action">
@@ -273,9 +273,9 @@
                   <div class="modal-content">
                     <h4>Crypto Currency News Scraper</h4>
                     <p>Like so many other people I am enthralled with Crypto Currencies and Block Chain, but I never have time
-                      to finish an article so I built a news scraper the will go to crypto and blockchain news sites and
-                      return the top new article. It will display the title, summary and a link to the article. Then you
-                      have the ability to save the article where they. Will be stored in a database and will be rendered
+                      to finish an article. So, I built a news scraper the will go to crypto and blockchain news sites and
+                      return the top new article. It will display the title, summary and a link to that article. Then you
+                      have the ability to save the article and they will be stored in a database. They will then be rendered
                       when your return to the page. Saved articles can either be deleted or you can click notes, which will
                       open a modal where you can write notes about the article that will also be stored in the database
                     </p>
@@ -305,7 +305,7 @@
                 <div id="modalFriend" class="modal">
                   <div class="modal-content">
                     <h4>Simpson Friend Finder</h4>
-                    <p>This sweet little app will ask you a series of personality questions and based on your personality the
+                    <p>This sweet little app that will ask you a series of personality questions and based on your personality the
                       app will tell you what cast member of The Simpsons would be your bestie!
                     </p>
                     <p class="center-align light">JavaScript | Node.js | NPM | GitHub | Express | HTML 5 | Visual Code Studio | CSS 3 | Bootstrap </p>
@@ -450,7 +450,7 @@
                 <li><a class="white-text" href="https://github.com/WTB20" target="_blank">GitHub</a></li>
                 <li><a class="white-text" href="https://www.linkedin.com/in/wesbubeck/" target="_blank">LinkedIn</a></li>
                 <li><a class="white-text" href="mailto:wesbubeck20@gmail.com">Email</a></li>
-                <li><a class="white-text" href="tel:919489480">Phone Number</a></li>
+                <li><a class="white-text" href="tel:9199489480">Phone Number</a></li>
               </ul>
             </div>
           </div>
