added text and animation above carousel

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
             </ul>
             <a href="#" data-activates="slide-out" class="button-collapse"><i class="medium material-icons icon-purple">menu</i></a>
             <h3 class="center-align animated fadeInLeftBig">Wes Bubeck</h3>
-            <h5 class="light center-align animated animated fadeInRightBig">UIX Architect, Engineer, Designer</h5>
+            <h5 class="light center-align animated fadeInRightBig">UIX Architect, Engineer, Designer</h5>
             <br>
           </div>
         </div>
@@ -118,7 +118,7 @@
                 <br><br><br>
                 <div class="divider"></div>
                 <br><br>
-                <!-- Modal Trigger -->
+                <!-- Resume Button-->
                 <a class="waves-effect waves-light btn" href="https://docs.google.com/document/d/1L4xT8GUSZfdpB66q_L8t03N4ldAUjosdHac-bORO_uI/edit?usp=sharing"
                   target="_blank">Resume</a>
               </div>
@@ -369,6 +369,7 @@
           <div class="row section scrollspy" id="technology">
             <br>
             <h4 class="center-align light">Technologies</h4>
+            <h6 class="center-align light animated infinite pulse">Click or Swipe to scroll</h6>
             <div class="carousel">
               <a class="carousel-item" href="#one!"><img src="logos/javascript.svg"><h5 class="center-align">JavaScript</h5></a>
               <a class="carousel-item" href="#one!"><img src="logos/es6.svg"><h5 class="center-align">JavaScript ES6</h5></a>
