changed the font color

--- a/public/index.html
+++ b/public/index.html
@@ -369,7 +369,7 @@
           <div class="row section scrollspy" id="technology">
             <br>
             <h4 class="center-align light">Technologies</h4>
-            <h6 class="center-align light animated infinite pulse">Click or Swipe to scroll</h6>
+            <h6 class="center-align animated infinite pulse grey-text">Click or Swipe to scroll</h6>
             <div class="carousel">
               <a class="carousel-item" href="#one!"><img src="logos/javascript.svg"><h5 class="center-align">JavaScript</h5></a>
               <a class="carousel-item" href="#one!"><img src="logos/es6.svg"><h5 class="center-align">JavaScript ES6</h5></a>
