--- a/public/index.html
+++ b/public/index.html
@@ -169,7 +169,7 @@
                       </div>
                       <div class="card-action">
                         <a href="#modalCrewify" class="modal-trigger">About</a>
-                        <a href="https://github.com/WTB20/Crewify" target="_blank">Repo</a>
+                        <a href="https://github.com/WTB20/crewifySampleApp" target="_blank">Repo</a>
                         <a href="https://agile-fortress-21519.herokuapp.com/" target="_blank">App</a>
                       </div>
                     </div>
